--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,4 +1,47 @@
-.my-button {
-  --button-border-radius: 10px;
-  --button-default-color: #f2f3f5;
+.bc{
+  width: 100%;
+  height: 100%;
+  background-color: #E6E6E6;
+}
+.logo{
+  width: 100%;
+  position: absolute;
+	top:0;
+}
+.image1{
+  width: 100%;
+  height: 340rpx;
+}
+cover-image{
+  width: 60%;
+  height: 50px;
+  margin: auto;
+}
+.flex-item{
+  width: 100%;
+  height: 90rpx;
+  opacity: .7;
+}
+.demo-text-3 {
+  background: rgba(255, 255, 255, 0.7);
+}
+.navigateto{
+  margin: -6rpx;
+}
+.cell{
+  margin-top: 26rpx;
+}
+.value-class {
+  flex: none !important;
+}
+van-checkbox{
+  margin-left: 10rpx;
+}
+
+.btn{
+  margin-top: 20rpx;
+}
+.btn_btn{
+  background-color: #1296DB;
+  color: #fff;
 }
