--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -39,9 +39,7 @@ van-checkbox{
 }
 
 .btn{
-  margin-top: 20rpx;
-}
-.btn_btn{
-  background-color: #1296DB;
-  color: #fff;
+  text-align: center;
+  padding-top: 20rpx;
+  background-color: #fff;
 }
