--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -69,6 +69,6 @@
           </van-checkbox-group>
     </view>
     <view class="btn">
-      <van-button color="#1296DB" size="large" bindtap = 'gotoreinformation'>立即预约</van-button>
+      <van-button color="#1296DB" size="large" bind:click = 'gotoreinformation'>立即预约</van-button>
     </view>
 </view>
