--- a/pages/ticketdetails/ticketdetails.wxss
+++ b/pages/ticketdetails/ticketdetails.wxss
@@ -1,1 +1,93 @@
-/* pages/ticketdetails/ticketdetails.wxss */
+.main{
+    height: 1180rpx;
+    border: 10rpx solid #1296DB;
+}
+.notice_box_cls .notice_body0 {
+    position: relative;
+    height: 400rpx;
+    padding: 10rpx;
+    border-bottom:10rpx dashed #1296DB;
+}
+.code{
+    font-size:34rpx;
+    margin:20rpx;
+    text-align: center;
+}
+.notice .notice_bodybottom {
+    position: relative;
+    /* height: 600rpx; */
+    font-size: 26rpx;
+}
+.notice_title{
+    font-size: 34rpx;
+    font-weight: bolder;
+    line-height: 120rpx;
+    text-align: center;
+
+}
+.center{
+    width: 90%;
+    margin: 0 auto;
+}
+.logo{
+    margin: 40rpx;
+    /* text-align: center; */
+}
+.pic{
+    width: 68%;
+    height: 68%;
+    margin: auto;
+}
+.el-form-item {
+    margin-bottom: 0rpx; 
+}
+ .notice_body {
+    background:radial-gradient(20rpx at left top,#1296DB 50rpx,#fff 50%);
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 20rpx;
+    height: 20rpx;
+}
+ .notice_body1 {
+    background:radial-gradient(20rpx at right top,#1296DB 50rpx,#fff 50%);
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 20rpx;
+    height: 20rpx;
+}
+.notice_box_cls .notice_body2 {
+    background:radial-gradient(20rpx at right bottom,#1296DB 50rpx,#fff 50%);
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 20rpx;
+    height: 20rpx;
+    transform: rotate(90deg);
+}
+.notice_box_cls .notice_body3 {
+    background:radial-gradient(20rpx at left bottom,#1296DB 50rpx,#fff 50%);
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    width: 20rpx;
+    height: 20rpx;
+    transform: rotate(270deg);
+}
+.img{
+    width: 200rpx; 
+    height: 200rpx; 
+    border: 1rpx solid #A98364;
+    margin:  auto;
+    text-align: center;
+    line-height: 160rpx;
+}
+.img2{
+    width: 320rpx; 
+    height: 100rpx; 
+    border: 1rpx solid #A98364;
+    margin:  auto;
+    text-align: center;
+    line-height: 100rpx;
+}
