--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -36,7 +36,7 @@
     </view>
     <view class="cell">
         <van-cell title="门票预约" size="large" icon="bars"/>
-        <van-cell title="预约参观日期选择" bind:click="onDisplay" is-link value="选择日期"/>
+        <van-cell title="预约参观日期选择" bind:click="onDisplay" is-link value="{{ subscribeDate }}"/>
             <van-calendar
             show="{{ show }}"
             min-date="{{ minDate }}"
@@ -44,31 +44,19 @@
             bind:close="onClose" 
             bind:confirm="onConfirm"
             />
-        <van-checkbox-group max="{{1}}" value="{{ result }}" bind:change="onChange">
+          <van-radio-group value="{{ radio }}" bind:change="onChange">
             <van-cell-group>
-              <van-cell
-                center
-                wx:for="{{ list }}"
-                wx:key="index"
-                title="上午票"
-                label="9:00-10:00" 
-                value-class="value-class"
-                clickable
-                data-index="{{ index }}"
-                bind:click="toggle"
-                value="请选择时间段"
-            >
-                <van-checkbox
-                    slot="right-icon"
-                    catch:tap="noop"
-                    class="checkboxes-{{ index }}"
-                    name="{{ item }}"
-                />
+              <van-cell center title="上午票" clickable data-name="1" value="请选择时间段" label="{{timeSlice1}}" value-class="value-class" bind:click="onClick">
+                <van-radio slot="right-icon" name="1" />
+              </van-cell>
+              <van-cell center title="下午票" clickable data-name="2" value="请选择时间段" label="{{timeSlice2}}" value-class="value-class" bind:click="onClick">
+                <van-radio slot="right-icon" name="2" />
               </van-cell>
             </van-cell-group>
-          </van-checkbox-group>
+          </van-radio-group>
     </view>
     <view class="btn">
       <van-button color="#1296DB" size="large" bindtap = 'gotoreinformation'>立即预约</van-button>
     </view>
+    <van-toast id="van-toast" />
 </view>
