--- a/pages/subscribe/subscribe.wxml
+++ b/pages/subscribe/subscribe.wxml
@@ -13,14 +13,53 @@
     </view>
     <view class="choosePerson">
         <view class="choosePerson_1">
-            <van-button type="info">选择参观人员</van-button>
+            <van-button type="info" bind:click="choosePerson">选择参观人员</van-button>
             <view class="choosePerson_1_2">请确保姓名、证件号填写正确</view>
         </view>
     </view>
     <view class="submit">
         <van-row>
-            <van-col span="12" class="submit_1">span: 8</van-col>
+            <van-col span="12" class="submit_1">
+                <view><span style="color: red;">{{total}}</span>张</view>
+                <view style="font-size: 0.6rem;">总票数</view>
+            </van-col>
             <van-col span="12" class="submit_2" bindtap="cmdSubmit">立即预约</van-col>
-          </van-row>
+        </van-row>
     </view>
+    <!-- 选择参观人员 -->
+    <van-popup show="{{ show }}" position="bottom" custom-style="height: 50%;" bind:close="onClose">
+        <view class="popupBox">
+            <view class="popupBox_1">
+                <van-button type="danger" size="small" bind:click="cancel">取消</van-button>
+                <van-button type="info" size="small" class="popupBox_1_2">确定</van-button>
+            </view>
+        </view>
+        <view class="popupBox_2" bindtap="add">
+            <view class="popupBox_2_1">+添加参观人员</view>
+        </view>
+        <view class="popupBox_3">
+            已选择<span class="tit">{{choose}}</span>张票，同一账户最多同时预约<span class="tit">{{max}}</span>张票
+        </view>
+        <view class="popupBox_4">
+            <van-checkbox-group value="{{ result }}" bind:change="onChange">
+                <van-cell-group>
+                  <van-cell
+                    wx:for="{{ list }}"
+                    wx:key="index"
+                    title="复选框"
+                    value-class="value-class"
+                    clickable
+                    data-index="{{ index }}"
+                    bind:click="toggle"
+                  >
+                    <van-checkbox
+                      catch:tap="noop"
+                      class="checkboxes-{{ index }}"
+                      name="{{ item }}"
+                    />
+                  </van-cell>
+                </van-cell-group>
+              </van-checkbox-group>
+        </view>
+    </van-popup>
 </view>
