--- a/pages/bookinginformation/bookinginformation.wxss
+++ b/pages/bookinginformation/bookinginformation.wxss
@@ -1,8 +1,11 @@
+page {
+  background: #f5f5f5;
+}
 .bc{
     padding-top: 20rpx;
     /* width: 100%; */
-    height: 1200rpx;
-    background-color: #E6E6E6;
+    /* height: 1200rpx; */
+    /* background-color: #f5f5f5; */
   }
   .mianban{
       margin-bottom: 20rpx;
