--- a/pages/changepassword/changepassword.wxss
+++ b/pages/changepassword/changepassword.wxss
@@ -1,8 +1,11 @@
+page {
+  background: #f5f5f5;
+}
 .bc{
     padding-top: 10rpx;
     /* width: 100%; */
-    height: 1190rpx;
-    background-color: #E6E6E6;
+    /* height: 1190rpx;
+    background-color: #f5f5f5; */
   }
   .van-cell{
     margin: 40rpx 0;
