--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,7 +1,10 @@
+/* page {
+  background: #f5f5f5;
+} */
 .bc{
   /* width: 100%; */
   height: 100%;
-  background-color: #E6E6E6;
+  background-color: #f5f5f5;
 }
 .logo{
   width: 100%;
@@ -42,4 +45,7 @@ van-checkbox{
   text-align: center;
   padding-top: 20rpx;
   background-color: #fff;
+}
+van-radio{
+  margin-left: 10rpx;
 }
