--- a/pages/login/login.wxss
+++ b/pages/login/login.wxss
@@ -1,7 +1,5 @@
-.bc{
-  /* width: 100%; */
-  height: 1110rpx;
-  background-color: #E6E6E6;
+page {
+  background: #f5f5f5;
 }
 .picture{
   padding-top: 30rpx;
