--- a/pages/reinformation/reinformation.wxml
+++ b/pages/reinformation/reinformation.wxml
@@ -1,2 +1,27 @@
-<!--pages/reinformation/reinformation.wxml-->
-<text>pages/reinformation/reinformation.wxml</text>
+<view >
+<view class="cell">
+    <van-cell title="预约参观日期选择" bind:click="onDisplay" is-link value="{{ subscribeDate }}"/>
+        <van-calendar
+        show="{{ show }}"
+        min-date="{{ minDate }}"
+        max-date="{{ maxDate }}"
+        bind:close="onClose" 
+        bind:confirm="onConfirm"
+        />
+      <van-radio-group value="{{ radio }}" bind:change="onChange">
+        <van-cell-group>
+          <van-cell center title="上午票" clickable data-name="1" value="请选择时间段" label="{{timeSlice1}}" value-class="value-class" bind:click="onClick">
+            <van-radio slot="right-icon" name="1" />
+          </van-cell>
+          <van-cell center title="下午票" clickable data-name="2" value="请选择时间段" label="{{timeSlice2}}" value-class="value-class" bind:click="onClick">
+            <van-radio slot="right-icon" name="2" />
+          </van-cell>
+        </van-cell-group>
+      </van-radio-group>
+</view>
+<view class="btn">
+    <van-button plain color="#1296DB" size="normal"  bind:click = 'gotoreturn'>  取 消  </van-button>
+  <van-button color="#1296DB" size="normal" bind:click = 'gotoreinformation'>  确 定  </van-button>
+</view>
+<van-toast id="van-toast" />
+</view>
