--- a/pages/userinformation/userinformation.wxss
+++ b/pages/userinformation/userinformation.wxss
@@ -1,7 +1,10 @@
+page {
+    background: #f5f5f5;
+}
 .bc{
     /* width: 100%; */
-    height: 1200rpx;
-    background-color: #E6E6E6;
+    /* height: 1200rpx;
+    background-color: #f5f5f5; */
   }
   .van-cell {
       line-height: 80rpx;
