--- a/pages/changepassword/changepassword.wxml
+++ b/pages/changepassword/changepassword.wxml
@@ -2,28 +2,40 @@
 	<view class="cellcenter">
 		<van-cell-group >
 			<van-field
+			clearable
 			value="{{ expassword }}"
 			type="password"
 			label="原密码"
 			placeholder="请输入原密码"
 			required
 			border="{{ false }}"
+			error-message="{{expasswordmessage}}"
+			bind:change="expasswordchange"
+			name="acc_expassword"
 			/>
 			<van-field
+			clearable
 			value="{{ newpassword }}"
 			type="password"
 			label="新密码"
 			placeholder="请设置新密码"
 			required
 			border="{{ false }}"
+			error-message="{{newpasswordmessage}}"
+			bind:change="newpasswordchange"
+			name="acc_newpassword"
 			/>
 			<van-field
+			clearable
 			value="{{ repassword }}"
 			type="password"
 			label="新密码"
 			placeholder="请再次确定新密码"
 			required
 			border="{{ false }}"
+			error-message="{{repasswordmessage}}"
+			bind:change="repasswordchange"
+			name="acc_repassword"
 			/>
 		</van-cell-group>
 		密码长度为6-20位
