--- a/pages/museumintroduced/museumintroduced.wxss
+++ b/pages/museumintroduced/museumintroduced.wxss
@@ -1,1 +1,21 @@
-/* pages/museumintroduced/museumintroduced.wxss */
+page {
+    background: #f5f5f5;
+  }
+  .bc{
+    margin: 40rpx;
+}
+.text{
+    text-align: center;
+    font-size: 24px;
+    font-weight: normal;
+    margin-bottom: 20rpx;
+}
+rich-text{
+    font-size: 14px;
+}
+.picture{
+    text-align: center;
+}
+.cell{
+    margin-bottom: 20rpx;
+}
