--- a/pages/location/location.wxml
+++ b/pages/location/location.wxml
@@ -1,2 +1,13 @@
-<!--pages/location/location.wxml-->
-<text>pages/location/location.wxml</text>
+<view class="bc">
+    <map id="map" 
+    longitude="{{longitude}}" 
+    latitude="{{latitude}}" 
+    scale="{{scale}}" 
+    controls="{{controls}}" 
+    bindcontroltap="controltap" 
+    markers="{{markers}}" 
+    bindmarkertap="markertap" 
+    bindregionchange="regionchange" 
+    show-location 
+    style="width: 100%; height:{{view.Height}}px;"></map>
+</view>
