--- a/pages/userinformation/userinformation.wxml
+++ b/pages/userinformation/userinformation.wxml
@@ -1,13 +1,20 @@
 <view class="bc">
     <van-cell-group>
-        <van-cell title="用户头像" is-link size="large">
+        <van-cell title="用户头像" is-link size="large" bind:click="showimg">
             <van-image
             width="20%"
             height="100%"
             fit="cover"
             round
-            src="https://img.yzcdn.cn/vant/cat.jpeg"
+            src="{{fileurl}}"
             />
+            <van-popup show="{{ imgshow }}" closeable position="bottom" custom-style="height: 20%;" bind:close="onCloseimgshow">
+                <view class="btnimg">
+                    <van-uploader bind:after-read="afterRead">
+                        <van-button icon="photo"  type="info">上传图片</van-button>
+                    </van-uploader>
+                </view>
+            </van-popup>
         </van-cell>
         <van-toast id="van-toast" />
         <van-cell title="用户姓名" is-link value="{{name}}" size="large" bind:click="showname"/>
@@ -28,8 +35,8 @@
             bind:select="onSelectjobshow"
             />
         <van-cell title="地区" is-link value="内容" size="large" bind:click="showregion"/>
-        <van-popup show="{{ regionshow }}" position="bottom" custom-style="height: 40%;" >
-            <van-area  show-toolbar title="选择地区"  bind:confirm="onConfirm"  bind:cancel="onCancel" area-list="{{ areaList }}" />
-        </van-popup>
+            <van-popup show="{{ regionshow }}" position="bottom" custom-style="height: 40%;" >
+                <van-area  show-toolbar title="选择地区"  bind:confirm="onConfirm"  bind:cancel="onCancel" area-list="{{ areaList }}" />
+            </van-popup>
     </van-cell-group>
 </view>
