--- a/pages/userinformation/userinformation.wxss
+++ b/pages/userinformation/userinformation.wxss
@@ -9,3 +9,12 @@ page {
   .van-cell {
       line-height: 80rpx;
   }
+  .uploadpic{
+      text-align: center;
+      margin-top: 20rpx;
+  }
+  .btnimg{
+      text-align: center;
+      width: 100%;
+      margin-top: 10%;
+  }
