--- a/pages/museumintroduced/museumintroduced.wxml
+++ b/pages/museumintroduced/museumintroduced.wxml
@@ -1,31 +1,18 @@
 <view class="bc">
-    <view class="cell">
+    <view class="cell" wx:for="{{tabledata}}" wx:key="item.id">
         <view class="text">
-        博物馆介绍标题1
+        {{item.title}}
         </view>
-        <rich-text nodes="{{htmlSnip}}"></rich-text>
+        <rich-text nodes="{{item.htmlSnip}}"></rich-text>
         <view class="picture">
             <van-image
             width="10rem"
             height="10rem"
             fit="contain"
-            src="https://img.yzcdn.cn/vant/cat.jpeg"
+            src="{{item.imgurl}}"
             />
         </view>
         
     </view>
-    <view class="cell">
-        <view class="text">
-        博物馆介绍标题2
-        </view>
-        <rich-text nodes="{{htmlSnip}}"></rich-text>
-        <view class="picture">
-            <van-image
-            width="10rem"
-            height="10rem"
-            fit="contain"
-            src="https://img.yzcdn.cn/vant/cat.jpeg"
-            />
-        </view>
-    </view>
+    
 </view>
