--- a/pages/bookinginformation/bookinginformation.wxss
+++ b/pages/bookinginformation/bookinginformation.wxss
@@ -3,13 +3,21 @@ page {
 }
 .bc{
     padding-top: 20rpx;
-    /* width: 100%; */
-    /* height: 1200rpx; */
-    /* background-color: #f5f5f5; */
   }
   .mianban{
       margin-bottom: 20rpx;
   }
-  .van-cell__value {
-    color: #ee0a24;
+.label-class{
+  max-width: 70px !important;
+  min-width: 75px !important;
+}
+.statussty{
+  position: absolute;
+  top: 50%;
+  left: 82%;
+  transform: translate(-25%,-25%);
+  line-height: 40px;
+  border-left: 1px solid #b6b6b6;
+  padding-left: 36rpx;
+  color: #323233;
 }
