--- a/pages/register/register.wxss
+++ b/pages/register/register.wxss
@@ -1,16 +1,18 @@
 /* pages/register/register.wxss */
 .box {
-    width: 100%;
-    height: 300px;
-    margin-top: 200rpx;
+    margin: 100rpx 60rpx;
 }
 .boxrow_1 {
     text-align: center;
 }
 .boxrow_2 {
-    margin-top: 40rpx;
+    margin-top: 100rpx;
 }
 .boxrow_3 {
-    margin-top: 80rpx;
+    margin-top: 68rpx;
     text-align: center;
+}
+.boxrow_21{
+    margin: 26rpx;
+    font-size: 14px;
 }
