--- a/pages/register/register.wxml
+++ b/pages/register/register.wxml
@@ -6,12 +6,12 @@
             </view>
             <view class="boxrow_2">
                 <van-cell-group>
-                    <van-field value="{{ phone }}" clearable label="手机号" placeholder="请输入手机号" bind:change="inputPhone" />
-                    <van-field value="{{ sms }}" center clearable label="短信验证码" placeholder="请输入短信验证码"  bind:change="inputSms" use-button-slot>
-                        <van-button slot="button" size="small" type="primary">发送验证码</van-button>
+                    <van-field value="{{ phone }}" clearable label="手机号" placeholder="请输入手机号" bind:change="inputPhone" error-message="{{phoneMsg}}"/>
+                    <van-field value="{{ sms }}" center clearable label="短信验证码" placeholder="请输入短信验证码"  bind:change="inputSms" use-button-slot error-message="{{smsMsg}}">
+                        <van-button slot="button" size="small" type="primary" bind:click="sendSms">发送验证码</van-button>
                     </van-field>
-                    <van-field value="{{ password }}" type="password" label="密码" placeholder="设置登录密码"  bind:change="inputPass"/>
-                    <van-field value="{{ checkpass }}" type="password" label="确认密码" placeholder="确认登录密码" bind:change="inputCheckpass"/>
+                    <van-field value="{{ password }}" type="password" label="密码" placeholder="设置登录密码(6-20位)"  bind:change="inputPass" error-message="{{passMsg}}"/>
+                    <van-field value="{{ checkpass }}" type="password" label="确认密码" placeholder="确认登录密码" bind:change="inputCheckpass" bind:blur="blurCheckpass" error-message="{{checkpassMsg}}"/>
                     
                 </van-cell-group>
                 <view class="boxrow_21">
@@ -25,5 +25,6 @@
                 <van-button type="info" round size="large" bind:click="submit">确认</van-button>
             </view>
         </van-row>
+        <van-toast id="van-toast" />
     </view>
 </van-row>
