--- a/pages/userLogin/userLogin.wxml
+++ b/pages/userLogin/userLogin.wxml
@@ -6,7 +6,7 @@
             </view>
             <view class="boxrow_2">
                 <van-cell-group>
-                    <van-field value="{{ username }}" clearable label="用户名" placeholder="请输入用户名" bind:change="inputName"
+                    <van-field value="{{ username }}" clearable label="用户名" placeholder="请输入用户名或手机号" bind:change="inputName"
                         error-message="{{nameErr}}" />
                     <van-field value="{{ password }}" type="password" label="密码" placeholder="请输入密码"
                         border="{{ false }}" bind:change="inputPass" error-message="{{passErr}}" />
